# Otrv1-Demo

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
key/: alice.p12  alice_cert.pem  bob.p12  bob_cert.pem
migrations/: 1_table.sql
src/: connection.rs  data_types.rs  db.rs  interface.rs  main.rs  net.rs  screen.rs
