[package]
name = "ortv1"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
iced = { version = "0.14.0", features = ["debug", "tokio"] }
openssl = { version = "0.10.75", features = ["vendored"] }
sqlx = { version = "0.8.6", features = ["chrono", "migrate", "runtime-tokio", "sqlite"] }
