[package]
name = "ortv1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
iced = { version = "0.14.0", features = ["debug", "tokio"] }
openssl = { version = "0.10.75", features = ["vendored"] }
rfd = "0.16.0"
sqlx = { version = "0.8.6", features = ["chrono", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing", "tokio-macros", "net", "time", "rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
